--- a/src/App.css
+++ b/src/App.css
@@ -10,10 +10,16 @@
     text-decoration: none;
 }
 :root{
+    /* --color-bg:#1f1f38;
+    --color-bg-variant:#2c2c6c;
+    --color-primary:#4db5ff;
+    --color-primary-variant:rgba(77,181,255,0.4); */
+    
     --color-bg:#1f1f38;
     --color-bg-variant:#2c2c6c;
     --color-primary:#4db5ff;
     --color-primary-variant:rgba(77,181,255,0.4);
+
     --color-white:#fff;
     --color-light:rgba(255,255,255,0.6);
 
@@ -50,7 +56,8 @@ h1{
 }
 
 section{
-    margin-top: 8rem;
+    padding-top:4rem;
+    margin-top: 4rem;
     height: 100vh;
 }
 section > h2 ,section > h5{
@@ -60,6 +67,7 @@ section > h2 ,section > h5{
 
 section > h2{
     color: var(--color-primary);
+    margin-bottom: 2rem;
 }
 
 .text-light{
