--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -1,6 +1,6 @@
 .about__container{
     display: grid;
-    grid-template-columns: 35% 50%;
+    grid-template-columns: 35% 60%;
     gap: 15%;
 
 }
@@ -33,14 +33,14 @@
 .about__cards{
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    gap: 1.5rem;
+    gap: 1rem;
 }
 
 .about__card{
     background: var(--color-bg-variant);
     border: 1px solid transparent;
     border-radius: 1rem;
-    padding: 2rem;
+    padding: 1.1rem;
     text-align: center;
     transition: var(--transition);
 }
@@ -61,7 +61,7 @@
 }
 
 .about__card small{
-    font-size: 0.7rem;
+    font-size: 0.75rem;
     color: var(--color-light);
 }
 
@@ -69,7 +69,9 @@
     margin: 2rem 0 2.6rem;
     color: var(--color-light);
 }
-
+.name{
+    color: var(--color-primary);
+}
 
 @media screen and (max-width:1024px){
 
